--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "outDir": "./dist",
-    "typeRoots": [
-      "./src/types",
-      "./node_modules/@types"
-    ]
-  }
+    "typeRoots": ["./src/types", "./node_modules/@types"]
+  },
+  "include": ["./src/**/*"]
 }
